syntax = "proto2";

package persistence;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/persistence/config";

////////////////////////////////////////////////////////////////////////////////

message PersistenceConfig {
    required string Endpoint = 1;
    required string Database = 2;
    optional string RootPath = 3;
    optional bool Secure = 4;
    optional string RootCertsFile = 5;
    optional string ConnectionTimeout = 6 [default = "10s"];
    optional bool DisableAuthentication = 7;
    optional S3Config S3Config = 8;
    // Timeout for YDB call, i.e. BeginTransaction, Execute, Commit, etc.
    optional string CallTimeout = 9 [default = "600s"];
}

message S3Config {
    required string Endpoint = 1;
    required string Region = 2;
    required string CredentialsFilePath = 3;
    optional string CallTimeout = 4 [default = "60s"];
}
