syntax = "proto2";

package config;

import "cloud/disk_manager/internal/pkg/tasks/logging/config/config.proto";
import "cloud/disk_manager/internal/pkg/tasks/persistence/config/config.proto";
import "cloud/disk_manager/internal/pkg/tasks/config/config.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/tasks/acceptance_tests/recipe/node/config";

////////////////////////////////////////////////////////////////////////////////

message Config {
    required string Hostname = 1;
    required tasks.TasksConfig TasksConfig = 2;
    required persistence.PersistenceConfig PersistenceConfig = 3;
    required logging.LoggingConfig LoggingConfig = 4;
}
